--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,18 @@
 }
 
 body {
+    background-color: rgb(246, 248, 249);
     font-family: sans-serif;
 }
+main{
+    width: 900px;
+    margin: auto;
+    margin-top: 30px;
+}
+
 header {
     padding: 10px;
+    background-color: white;
 }
 header h1 {
     display: inline-block;
@@ -18,5 +26,86 @@ header h1 {
 
 header img {
     vertical-align: bottom;
+}
 
+section button {
+    padding: 5px 2px;
+    border-radius: 5px;
+}
+
+p{
+    margin-top: 20px;
+}
+
+h3 {
+    margin-top: 30px;
+    color: rgb(52, 55, 64);
+}
+
+.top-button {
+    background-color: white;
+    padding: 10px 60px;
+    color: rgb(51, 55, 63);
+}
+
+.to-do-list {
+    margin-top: 2px;
+    background-color: white;
+    padding: 10px 60px;
+    color: rgb(51, 55, 63);
+}
+
+.blue-button {
+    background-color: rgb(71, 173, 241);
+    border: 1px solid rgb(91, 182, 242);
+    color: white;
+}
+
+.white-button {
+    background-color: white;
+    border: 1px solid rgb(184, 191, 198);
+    color:rgb(184, 191, 198);
+}
+
+.cross{
+    color: rgb(230, 63, 60);
+    border: 1px solid rgb(230, 63, 60);
+    border-radius: 50%;
+}
+
+.check{
+    color: rgb(81,182,152);
+    border: 1px solid rgb(81, 182, 152);
+    border-radius: 50%;
+}
+
+.tag {
+    color: white;
+    border-radius: 12px;
+    padding: 8px 14px;
+    font-size: 10px;
+}
+
+.editorial {
+    background-color: rgb(71, 173, 241);
+}
+
+.q1 {
+    background-color: rgb(124, 75,202);
+}
+
+.recruiting {
+    background-color: rgb(81, 182, 152);
+}
+
+.mobile {
+    background-color: rgb(229, 136, 25);
+}
+
+.website {
+    background-color: rgb(196, 67, 138);
+}
+
+.sales {
+    background-color: rgb(161, 195, 0);
 }
