--- a/css/style.css
+++ b/css/style.css
@@ -59,24 +59,28 @@ h3 {
     background-color: rgb(71, 173, 241);
     border: 1px solid rgb(91, 182, 242);
     color: white;
+    padding: 5px 10px;
 }
 
 .white-button {
     background-color: white;
     border: 1px solid rgb(184, 191, 198);
     color:rgb(184, 191, 198);
+    padding: 5px 10px;
 }
 
 .cross{
     color: rgb(230, 63, 60);
     border: 1px solid rgb(230, 63, 60);
     border-radius: 50%;
+    padding: 0 3px;
 }
 
 .check{
     color: rgb(81,182,152);
     border: 1px solid rgb(81, 182, 152);
     border-radius: 50%;
+    padding: 0 2px;
 }
 
 .tag {
